Bug 39873 - Named entities in attributes aren't parsed correctly by HTML5 parser
Summary: Named entities in attributes aren't parsed correctly by HTML5 parser
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Adam Barth
URL:
Keywords:
Depends on:
Blocks: 39259
  Show dependency treegraph
 
Reported: 2010-05-28 05:57 PDT by Adam Barth
Modified: 2010-05-28 11:47 PDT (History)
3 users (show)

See Also:


Attachments
Patch (5.82 KB, patch)
2010-05-28 05:59 PDT, Adam Barth
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Barth 2010-05-28 05:57:38 PDT
Named entities in attributes aren't parsed correctly by HTML5 parser
Comment 1 Adam Barth 2010-05-28 05:59:17 PDT
Created attachment 57319 [details]
Patch
Comment 2 Eric Seidel (no email) 2010-05-28 10:12:41 PDT
Comment on attachment 57319 [details]
Patch

LGTM!
Comment 3 Adam Barth 2010-05-28 11:21:17 PDT
Comment on attachment 57319 [details]
Patch

Clearing flags on attachment: 57319

Committed r60370: <http://trac.webkit.org/changeset/60370>
Comment 4 Adam Barth 2010-05-28 11:21:23 PDT
All reviewed patches have been landed.  Closing bug.