2010-05-28  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Named entities in attributes aren't parsed correctly by HTML5 parser
        https://bugs.webkit.org/show_bug.cgi?id=39873

        I misplaced this if statement when writing this code originally.  Now
        that we have test coverage for this paragraph in the spec, we can see
        and fix the bug.

        * html/HTML5Lexer.cpp:
        (WebCore::HTML5Lexer::consumeEntity):
2010-05-28  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Named entities in attributes aren't parsed correctly by HTML5 parser
        https://bugs.webkit.org/show_bug.cgi?id=39873

        Add a test suite for parsing entities in attributes and update expected results.

        * html5lib/resources/entities02.dat: Added.
        * html5lib/runner-expected-html5.txt:
        * html5lib/runner-expected.txt:
        * html5lib/runner.html:


Canonical link: https://commits.webkit.org/51413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60370 268f45cc-cd09-0410-ab3c-d52691b4dbfc